--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Meridian — lean sprint tracking for focused teams" />
+    <meta name="description" content="Meridian — Work Management" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Meridian</title>
   </head>
-  <body class="bg-gray-50 text-gray-900 antialiased">
-    <div id="root"></div>
+  <body class="bg-gray-50 text-gray-900 antialiased flex flex-col min-h-screen">
+    <div id="root" class="flex-grow"></div>
+
+    <footer style="padding: 2rem; text-align: center; font-size: 0.875rem; color: #6b7280;">
+      <p>
+        <a href="https://turnstone.ltd/privacy.html" target="_blank" rel="noopener noreferrer" style="text-decoration: underline; margin-right: 5px;">Privacy Policy</a> 
+        | 
+        <a href="https://turnstone.ltd/terms.html" target="_blank" rel="noopener noreferrer" style="text-decoration: underline; margin-left: 5px;">Terms of Service</a>
+      </p>
+    </footer>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
